--- a/antoryum_gayrimenkul/templates/doc.html
+++ b/antoryum_gayrimenkul/templates/doc.html
@@ -1,4 +1,4 @@
-{% extends "templates/base.html" %}
+{% extends "templates/base_doc.html" %}
 {%- from "templates/includes/navbar/navbar_items.html" import render_item -%}
 
 {%- block head_include %}
