--- a/antoryum_gayrimenkul/antoryum_gayrimenkul/doctype/estate/templates/estate.html
+++ b/antoryum_gayrimenkul/antoryum_gayrimenkul/doctype/estate/templates/estate.html
@@ -9,6 +9,12 @@
 {%- set images = estate_gallery.gallery_items -%}
 {% endif %}
 
+<style>
+   .slick-slide img {
+      height: 100vh !important;
+   }
+</style>
+
 <div class="gray-bg small-padding fl-wrap">
     <div class="container">
        <div class="row">
