--- a/antoryum_gayrimenkul/antoryum_gayrimenkul/doctype/estate/templates/estate_list.html
+++ b/antoryum_gayrimenkul/antoryum_gayrimenkul/doctype/estate/templates/estate_list.html
@@ -22,6 +22,11 @@
 {% endblock %}
 
 {% block page_content %}
+<style>
+   .geodir-category-img img {
+      height: 50vh !important;
+   }
+</style>
 <section class="gray-bg small-padding">
     <div class="container">
         <div class="row">
