--- a/antoryum_gayrimenkul/templates/includes/web_sidebar.html
+++ b/antoryum_gayrimenkul/templates/includes/web_sidebar.html
@@ -38,7 +38,7 @@
 {% if harpiya.user != 'Guest' %}
 <ul class="list-unstyled">
 	<li class="sidebar-item">
-		<a href="/me">{{ _("My Account") }}</a>
+		<a href="/me">{{ _("Hesabım") }}</a>
 	</li>
 </ul>
 {% endif %}
