--- a/antoryum_gayrimenkul/templates/doc.html
+++ b/antoryum_gayrimenkul/templates/doc.html
@@ -91,7 +91,7 @@ id="page-{{ name or route | e }}" data-path="{{ pathname | e }}"
 			{% block page_toc %}
 			{% if page_toc_html %}
 			<div>
-				<h5>On this page</h5>
+				<h5>{{ _("Bu sayfada") }}</h5>
 				{{ page_toc_html }}
 			</div>
 			{% endif %}
